<resources>
    <string name="app_name">Customer</string>
    <string name="title_activity_home">Food amigo</string>
    <string name="link_image">link image</string>
    <string name="product_add">Add</string>
    <string name="desc_product_image">Product image</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cart">Cart</string>
    <string name="divider">|</string>
    <string name="checkout">Checkout</string>
    <string name="Rs"> \u20B9 </string>
    <string name="edit_name">Edit profile name</string>
    <string name="address">Address</string>
    <string name="add_address">Add address</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="hint_name">First Last</string>
    <string name="hint_mobile">Mobile</string>
    <string name="menu_profile">profile</string>
    <string name="use_location">Use current location</string>
    <string name="enter_address">H. no. 007 X street, A-403 X Society</string>
    <string name="enterLocality">St.inez , Miramar</string>
    <string name="enterAddressName">Enter a name for the address. E.g Home,Work</string>
    <string name="label_locality">Locality</string>
    <string name="label_address">Address</string>
    <string name="label_geo">Lat/Long</string>
    <string name="btn_use_current">Use current</string>
    <string name="btn_select_on_map">Select on map</string>
    <string name="label_name">Name</string>
    <string name="label_mobile">Mobile</string>
    <string name="no_saved_address">No saved addresses</string>
    <string name="label_items">Items</string>
    <string name="label_total">Total</string>
    <string name="place_order">Place order</string>
    <string name="placed_at">Placed at:</string>
    <string name="order_status">Order status</string>
    <string name="skip">Skip</string>
    <string name="img_desc_tut">Tutorial image</string>
    <string name="hint_username">Email / Mobile</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_email">Email</string>
</resources>
