<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_locality"
        android:paddingBottom="5dp"
        android:textSize="25sp"/>

    <AutoCompleteTextView
        android:id="@+id/acLocality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterLocality"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="30dp"
        android:padding="15px"
        android:background="@drawable/input_box_bg"
        android:inputType="text">

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_address"
        android:paddingBottom="5dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"
        android:padding="15px"
        android:background="@drawable/input_box_bg"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_geo"
        android:paddingBottom="5dp"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            style="@style/button"
            android:text="@string/btn_use_current"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            style="@style/button"
            android:text="@string/btn_select_on_map"/>

    </LinearLayout>

</LinearLayout>